--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/img/Vector.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/Vector.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
-
     <title>Test site</title>
 </head>
 
@@ -98,7 +97,7 @@
                     +40 729 131 637/+40 726 458 782
                 </p>
             </div>
-            <section class="choco-container">
+            <section class="slider">
                 <div class="choco-container__box">
                     <div class="choco">
                         <div class="choco__box-form">
@@ -167,16 +166,18 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> 
             </section>
             <div class="circle-box">
                 <div class="circle-box__circle" id="circle-one"></div>
                 <div class="circle-box__circle" id="circle-two"></div>
                 <div class="circle-box__circle" id="circle-three"></div>
             </div>
-            <!-- <section style="background-color: black;">dsdsssd</section> -->
+            <section style="background-color: black; height: 100px;">dsdsssd</section>
         </article>
     </main>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script src="app.js"></script>
 </body>
 
