--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             <div class="header__circle header__circle--active u-margin-top-big">
                 <div class="header__anchor-box">
-                    <a class="header__anchor" href="#"></a>
+                    <a class="header__anchor" href="#choco"></a>
                 </div>
             </div>
         </div>
@@ -98,7 +98,7 @@
                 </p>
             </div>
             <section class="slider">
-                <div class="choco-container__box">
+                <div class="choco-container__box" name="choco">
                     <div class="choco">
                         <div class="choco__box-form">
                             <p class="text-small u-padding-top-small">specialties</p>
@@ -106,15 +106,20 @@
                                 <div class="choco__square" id="choco-square"></div>
                             </div>
                             <div class="choco__header">
-                                <h1 class="heading-secondary heading-secondary--white u-margin-bottom-small">chocolate pancakes</h1>
+                                <h1 class="heading-secondary heading-secondary--white u-margin-bottom-small">chocolate
+                                    pancakes</h1>
                                 <p class="line"></p>
-                                <p class="choco__text-one">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at
+                                <p class="choco__text-one">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
+                                    at
                                     velit maximus, molestie est
                                     a, tempor magna.
                                 </p>
-                                <p class="choco__text-two">Integer ullamcorper neque eu purus euismod, ac faucibus mauris posuere. Morbi non ultrices
-                                    ligula. Sed dictum, enim sed ullamcorper feugiat, dui odio vehicula eros, a sollicitudin
-                                    lorem quam nec sem. Mauris tincidunt feugiat diam convallis pharetra. Nulla facilisis semper
+                                <p class="choco__text-two">Integer ullamcorper neque eu purus euismod, ac faucibus
+                                    mauris posuere. Morbi non ultrices
+                                    ligula. Sed dictum, enim sed ullamcorper feugiat, dui odio vehicula eros, a
+                                    sollicitudin
+                                    lorem quam nec sem. Mauris tincidunt feugiat diam convallis pharetra. Nulla
+                                    facilisis semper
                                     laoreet.
                                 </p>
                             </div>
@@ -129,15 +134,20 @@
                                 <div class="choco__square" id="choco-square"></div>
                             </div>
                             <div class="choco__header">
-                                <h1 class="heading-secondary heading-secondary--white u-margin-bottom-small">chocolate pancakes</h1>
+                                <h1 class="heading-secondary heading-secondary--white u-margin-bottom-small">chocolate
+                                    pancakes</h1>
                                 <p class="line"></p>
-                                <p class="choco__text-one">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at
+                                <p class="choco__text-one">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
+                                    at
                                     velit maximus, molestie est
                                     a, tempor magna.
                                 </p>
-                                <p class="choco__text-two">Integer ullamcorper neque eu purus euismod, ac faucibus mauris posuere. Morbi non ultrices
-                                    ligula. Sed dictum, enim sed ullamcorper feugiat, dui odio vehicula eros, a sollicitudin
-                                    lorem quam nec sem. Mauris tincidunt feugiat diam convallis pharetra. Nulla facilisis semper
+                                <p class="choco__text-two">Integer ullamcorper neque eu purus euismod, ac faucibus
+                                    mauris posuere. Morbi non ultrices
+                                    ligula. Sed dictum, enim sed ullamcorper feugiat, dui odio vehicula eros, a
+                                    sollicitudin
+                                    lorem quam nec sem. Mauris tincidunt feugiat diam convallis pharetra. Nulla
+                                    facilisis semper
                                     laoreet.
                                 </p>
                             </div>
@@ -152,33 +162,162 @@
                                 <div class="choco__square" id="choco-square"></div>
                             </div>
                             <div class="choco__header">
-                                <h1 class="heading-secondary heading-secondary--white u-margin-bottom-small">chocolate pancakes</h1>
+                                <h1 class="heading-secondary heading-secondary--white u-margin-bottom-small">chocolate
+                                    pancakes</h1>
                                 <p class="line"></p>
-                                <p class="choco__text-one">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at
+                                <p class="choco__text-one">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
+                                    at
                                     velit maximus, molestie est
                                     a, tempor magna.
                                 </p>
-                                <p class="choco__text-two">Integer ullamcorper neque eu purus euismod, ac faucibus mauris posuere. Morbi non ultrices
-                                    ligula. Sed dictum, enim sed ullamcorper feugiat, dui odio vehicula eros, a sollicitudin
-                                    lorem quam nec sem. Mauris tincidunt feugiat diam convallis pharetra. Nulla facilisis semper
+                                <p class="choco__text-two">Integer ullamcorper neque eu purus euismod, ac faucibus
+                                    mauris posuere. Morbi non ultrices
+                                    ligula. Sed dictum, enim sed ullamcorper feugiat, dui odio vehicula eros, a
+                                    sollicitudin
+                                    lorem quam nec sem. Mauris tincidunt feugiat diam convallis pharetra. Nulla
+                                    facilisis semper
                                     laoreet.
                                 </p>
                             </div>
                         </div>
                     </div>
-                </div> 
+                </div>
             </section>
-            <div class="circle-box">
-                <div class="circle-box__circle" id="circle-one"></div>
-                <div class="circle-box__circle" id="circle-two"></div>
-                <div class="circle-box__circle" id="circle-three"></div>
-            </div>
-            <section style="background-color: black; height: 100px;">dsdsssd</section>
+            <section class="menu">
+                <div class="menu__header">
+                    <h1 class="heading-secondary u-margin-bottom-small u-margin-top-medium-2">delicious menu</h1>
+                    <p class="line"></p>
+                    <p class="menu__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at
+                        velit maximus, molestie est
+                        a, tempor magna.
+                    </p>
+                </div>
+                <div class="menu__product">
+                    <a href="#" class="menu__product-food">SOUPE</a>
+                    <a href="#" class="menu__product-food">pizza</a>
+                    <a href="#" class="menu__product-food">pasta</a>
+                    <a href="#" class="menu__product-food">desert</a>
+                    <a href="#" class="menu__product-food">wine</a>
+                    <a href="#" class="menu__product-food">beer</a>
+                    <a href="#" class="menu__product-food">drinks</a>
+                </div>
+                <div class="menu__price">
+                    <div class="menu__price-box">
+                        <div class="menu__item">
+                            <p class="menu__text-one">PIZZA QUATRO STAGIONI . . . . 55,68 USD</p>
+                            <span class="menu__text-two">Integer ullamcorper neque eu purus euismod</span>
+                        </div>
+                        <div class="menu__item">
+                            <p class="menu__text-one">PIZZA QUATRO STAGIONI . . . . 55,68 USD</p>
+                            <span class="menu__text-two">Integer ullamcorper neque eu purus euismod</span>
+                        </div>
+                        <div class="menu__item">
+                            <p class="menu__text-one">PIZZA QUATRO STAGIONI . . . . 55,68 USD</p>
+                            <span class="menu__text-two">Integer ullamcorper neque eu purus euismod</span>
+                        </div>
+                        <div class="menu__item">
+                            <p class="menu__text-one">PIZZA QUATRO STAGIONI . . . . 55,68 USD</p>
+                            <span class="menu__text-two">Integer ullamcorper neque eu purus euismod</span>
+                        </div>
+                        <div class="menu__item">
+                            <p class="menu__text-one">PIZZA QUATRO STAGIONI . . . . 55,68 USD</p>
+                            <span class="menu__text-two">Integer ullamcorper neque eu purus euismod</span>
+                        </div>
+                        <div class="menu__item">
+                            <p class="menu__text-one">PIZZA QUATRO STAGIONI . . . . 55,68 USD</p>
+                            <span class="menu__text-two">Integer ullamcorper neque eu purus euismod</span>
+                        </div>
+                        <div class="menu__item">
+                            <p class="menu__text-one">PIZZA QUATRO STAGIONI . . . . 55,68 USD</p>
+                            <span class="menu__text-two">Integer ullamcorper neque eu purus euismod</span>
+                        </div>
+                    </div>
+
+                    <div class="menu__price-box">
+                        <div class="menu__item">
+                            <p class="menu__text-one">PIZZA QUATRO STAGIONI . . . . 55,68 USD</p>
+                            <span class="menu__text-two">Integer ullamcorper neque eu purus euismod</span>
+                        </div>
+                        <div class="menu__item">
+                            <p class="menu__text-one">PIZZA QUATRO STAGIONI . . . . 55,68 USD</p>
+                            <span class="menu__text-two">Integer ullamcorper neque eu purus euismod</span>
+                        </div>
+                        <div class="menu__item">
+                            <p class="menu__text-one">PIZZA QUATRO STAGIONI . . . . 55,68 USD</p>
+                            <span class="menu__text-two">Integer ullamcorper neque eu purus euismod</span>
+                        </div>
+                        <div class="menu__item">
+                            <p class="menu__text-one">PIZZA QUATRO STAGIONI . . . . 55,68 USD</p>
+                            <span class="menu__text-two">Integer ullamcorper neque eu purus euismod</span>
+                        </div>
+                        <div class="menu__item">
+                            <p class="menu__text-one">PIZZA QUATRO STAGIONI . . . . 55,68 USD</p>
+                            <span class="menu__text-two">Integer ullamcorper neque eu purus euismod</span>
+                        </div>
+                        <div class="menu__item">
+                            <p class="menu__text-one">PIZZA QUATRO STAGIONI . . . . 55,68 USD</p>
+                            <span class="menu__text-two">Integer ullamcorper neque eu purus euismod</span>
+                        </div>
+                        <div class="menu__item">
+                            <p class="menu__text-one">PIZZA QUATRO STAGIONI . . . . 55,68 USD</p>
+                            <span class="menu__text-two">Integer ullamcorper neque eu purus euismod</span>
+                        </div>
+                    </div>
+
+                    <div class="menu__price-box">
+                        <div class="menu__item">
+                            <p class="menu__text-one">PIZZA QUATRO STAGIONI . . . . 55,68 USD</p>
+                            <span class="menu__text-two">Integer ullamcorper neque eu purus euismod</span>
+                        </div>
+                        <div class="menu__item">
+                            <p class="menu__text-one">PIZZA QUATRO STAGIONI . . . . 55,68 USD</p>
+                            <span class="menu__text-two">Integer ullamcorper neque eu purus euismod</span>
+                        </div>
+                        <div class="menu__item">
+                            <p class="menu__text-one">PIZZA QUATRO STAGIONI . . . . 55,68 USD</p>
+                            <span class="menu__text-two">Integer ullamcorper neque eu purus euismod</span>
+                        </div>
+                        <div class="menu__item">
+                            <p class="menu__text-one">PIZZA QUATRO STAGIONI . . . . 55,68 USD</p>
+                            <span class="menu__text-two">Integer ullamcorper neque eu purus euismod</span>
+                        </div>
+                        <div class="menu__item">
+                            <p class="menu__text-one">PIZZA QUATRO STAGIONI . . . . 55,68 USD</p>
+                            <span class="menu__text-two">Integer ullamcorper neque eu purus euismod</span>
+                        </div>
+                        <div class="menu__item">
+                            <p class="menu__text-one">PIZZA QUATRO STAGIONI . . . . 55,68 USD</p>
+                            <span class="menu__text-two">Integer ullamcorper neque eu purus euismod</span>
+                        </div>
+                        <div class="menu__item">
+                            <p class="menu__text-one">PIZZA QUATRO STAGIONI . . . . 55,68 USD</p>
+                            <span class="menu__text-two">Integer ullamcorper neque eu purus euismod</span>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </article>
     </main>
+    <footer class="footer">
+        <p class="text-small u-padding-top-small">private events</p>
+        <div class="footer__box">
+            <div class="footer__box-img">
+                <img class="footer__img left" src="../img/Rectangle-ring.png" alt="" id="choco">
+                <div class="footer__item-left"><p class="footer__item-text footer__item-text--left">weddings</p></div>
+                <div class="footer__square" id="choco-square"></div>
+            </div>
+            <div class="footer__box-img">
+                <img class="footer__img right" src="../img/Friends.png" alt="" id="img">
+                <div class="footer__item-right"><p class="footer__item-text footer__item-text--right">corporate pzrties</p></div>
+                <div class="footer__square-right" id="square"></div>
+            </div>
+        </div>
+        <a class="footer__text text-secondary" href="tel:+40729131637"><pre>For private events please call:<span class="footer__phone"> +40 729 131 637/+40 726 458 782</span> or use the contact form.</pre></a>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script src="app.js"></script>
+    <script src="slider.js"></script>
 </body>
 
 </html>
