change footer for mobile first

--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@
         </div>
         <a class="footer__text text-secondary" href="tel:+40729131637"><pre>For private events please call:<span class="footer__phone"> +40 729 131 637/+40 726 458 782</span> or use the contact form.</pre></a>
     </footer>
+    <p style="width: 100%; background-color: black; height: 1000px;"></p>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script src="app.js"></script>
