change footer first mobile

--- a/index.html
+++ b/index.html
@@ -303,20 +303,27 @@
         <div class="footer__box">
             <div class="footer__box-img">
                 <img class="footer__img left" src="../img/Rectangle-ring.png" alt="" id="choco">
-                <div class="footer__item-left"><p class="footer__item-text footer__item-text--left">weddings</p></div>
+                <div class="footer__item-left">
+                    <p class="footer__item-text footer__item-text--left">weddings</p>
+                </div>
                 <div class="footer__square" id="choco-square"></div>
             </div>
             <div class="footer__box-img">
                 <img class="footer__img right" src="../img/Friends.png" alt="" id="img">
-                <div class="footer__item-right"><p class="footer__item-text footer__item-text--right">corporate pzrties</p></div>
+                <div class="footer__item-right">
+                    <p class="footer__item-text footer__item-text--right">corporate pzrties</p>
+                </div>
                 <div class="footer__square-right" id="square"></div>
             </div>
         </div>
-        <a class="footer__text text-secondary" href="tel:+40729131637"><pre>For private events please call:<span class="footer__phone"> +40 729 131 637/+40 726 458 782</span> or use the contact form.</pre></a>
+        <a class="footer__text text-secondary" href="tel:+40729131637">
+            <pre>For private events please call:<span class="footer__phone"> +40 729 131 637/+40 726 458 782</span> or use the contact form.</pre>
+        </a>
     </footer>
-    <p style="width: 100%; background-color: black; height: 1000px;"></p>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script src="app.js"></script>
     <script src="slider.js"></script>
 </body>
