change html footer img way

--- a/index.html
+++ b/index.html
@@ -302,14 +302,14 @@
         <p class="text-small u-padding-top-small">private events</p>
         <div class="footer__box">
             <div class="footer__box-img">
-                <img class="footer__img left" src="../img/Rectangle-ring.png" alt="" id="choco">
+                <img class="footer__img left" src="img/Rectangle-ring.png" alt="photo" id="choco">
                 <div class="footer__item-left">
                     <p class="footer__item-text footer__item-text--left">weddings</p>
                 </div>
                 <div class="footer__square" id="choco-square"></div>
             </div>
             <div class="footer__box-img">
-                <img class="footer__img right" src="../img/Friends.png" alt="" id="img">
+                <img class="footer__img right" src="img/Friends.png" alt="photo" id="img">
                 <div class="footer__item-right">
                     <p class="footer__item-text footer__item-text--right">corporate pzrties</p>
                 </div>
@@ -320,7 +320,6 @@
             <pre>For private events please call:<span class="footer__phone"> +40 729 131 637/+40 726 458 782</span> or use the contact form.</pre>
         </a>
     </footer>
-
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
